QueryMachine.XQuery/Parser/y.output
   0  $accept : module $end

   1  module : versionDecl MainModule
   2         | MainModule
   3         | versionDecl LibraryModule
   4         | LibraryModule

   5  versionDecl : XQUERY_VERSION StringLiteral Separator
   6              | XQUERY_VERSION StringLiteral ENCODING StringLiteral Separator

   7  MainModule : Prolog QueryBody

   8  LibraryModule : ModuleDecl Prolog

   9  ModuleDecl : MODULE_NAMESPACE NCName '=' URILiteral Separator

  10  Prolog :
  11         | decl_block1
  12         | decl_block2
  13         | decl_block1 decl_block2

  14  decl_block1 : decl1 Separator
  15              | decl_block1 decl1 Separator

  16  decl_block2 : decl2 Separator
  17              | decl_block2 decl2 Separator

  18  decl1 : Setter
  19        | Import
  20        | NamespaceDecl
  21        | DefaultNamespaceDecl

  22  decl2 : VarDecl
  23        | FunctionDecl
  24        | OptionDecl

  25  Setter : BoundarySpaceDecl
  26         | DefaultCollationDecl
  27         | BaseURIDecl
  28         | ConstructionDecl
  29         | OrderingModeDecl
  30         | EmptyOrderDecl
  31         | CopyNamespacesDecl

  32  Import : SchemaImport
  33         | ModuleImport

  34  Separator : ';'

  35  NamespaceDecl : DECLARE_NAMESPACE NCName '=' URILiteral

  36  BoundarySpaceDecl : DECLARE_BOUNDARY_SPACE PRESERVE
  37                    | DECLARE_BOUNDARY_SPACE STRIP

  38  DefaultNamespaceDecl : DECLARE_DEFAULT_ELEMENT NAMESPACE URILiteral
  39                       | DECLARE_DEFAULT_FUNCTION NAMESPACE URILiteral

  40  OptionDecl : DECLARE_OPTION QName StringLiteral

  41  OrderingModeDecl : DECLARE_ORDERING ORDERED
  42                   | DECLARE_ORDERING UNORDERED

  43  EmptyOrderDecl : DECLARE_DEFAULT_ORDER EMPTY_GREATEST
  44                 | DECLARE_DEFAULT_ORDER EMPTY_LEAST

  45  CopyNamespacesDecl : DECLARE_COPY_NAMESPACES PreserveMode ',' InheritMode

  46  PreserveMode : PRESERVE
  47               | NO_PRESERVE

  48  InheritMode : INHERIT
  49              | NO_INHERIT

  50  DefaultCollationDecl : DECLARE_DEFAULT_COLLATION URILiteral

  51  BaseURIDecl : DECLARE_BASE_URI URILiteral

  52  SchemaImport : IMPORT_SCHEMA opt_SchemaPrefix URILiteral
  53               | IMPORT_SCHEMA opt_SchemaPrefix URILiteral AT URILiteralList

  54  opt_SchemaPrefix :
  55                   | SchemaPrefix

  56  URILiteralList : URILiteral
  57                 | URILiteralList ',' URILiteral

  58  SchemaPrefix : NAMESPACE NCName '='
  59               | DEFAULT_ELEMENT NAMESPACE

  60  ModuleImport : IMPORT_MODULE URILiteral ModuleImportSpec
  61               | IMPORT_MODULE NAMESPACE NCName '=' URILiteral ModuleImportSpec

  62  ModuleImportSpec :
  63                   | AT URILiteralList

  64  VarDecl : DECLARE_VARIABLE '$' VarName opt_TypeDeclaration ':' '=' ExprSingle
  65          | DECLARE_VARIABLE '$' VarName opt_TypeDeclaration EXTERNAL

  66  opt_TypeDeclaration :
  67                      | TypeDeclaration

  68  ConstructionDecl : DECLARE_CONSTRUCTION PRESERVE
  69                   | DECLARE_CONSTRUCTION STRIP

  70  FunctionDecl : DECLARE_FUNCTION QName '(' opt_ParamList ')' FunctionBody
  71               | DECLARE_FUNCTION QName '(' opt_ParamList ')' AS SequenceType FunctionBody

  72  FunctionBody : EnclosedExpr
  73               | EXTERNAL

  74  opt_ParamList :
  75                | ParamList

  76  ParamList : Param
  77            | ParamList ',' Param

  78  Param : '$' VarName
  79        | '$' VarName TypeDeclaration

  80  EnclosedExpr : '{' Expr '}'

  81  QueryBody : Expr

  82  Expr : ExprSingle
  83       | Expr ',' ExprSingle

  84  ExprSingle : FLWORExpr
  85             | QuantifiedExpr
  86             | TypeswitchExpr
  87             | IfExpr
  88             | OrExpr

  89  FLWORExpr : FLWORPrefix RETURN ExprSingle
  90            | FLWORPrefix WhereClause RETURN ExprSingle
  91            | FLWORPrefix OrderByClause RETURN ExprSingle
  92            | FLWORPrefix WhereClause OrderByClause RETURN ExprSingle

  93  FLWORPrefix : ForClause
  94              | LetClause
  95              | FLWORPrefix ForClause
  96              | FLWORPrefix LetClause

  97  ForClause : FOR ForClauseBody

  98  ForClauseBody : ForClauseOperator
  99                | ForClauseBody ',' ForClauseOperator

 100  ForClauseOperator : '$' VarName opt_TypeDeclaration opt_PositionVar IN ExprSingle

 101  opt_PositionVar :
 102                  | PositionVar

 103  PositionVar : AT '$' VarName

 104  LetClause : LET LetClauseBody

 105  LetClauseBody : LetClauseOperator
 106                | LetClauseBody ',' LetClauseOperator

 107  LetClauseOperator : '$' VarName opt_TypeDeclaration ':' '=' ExprSingle

 108  WhereClause : WHERE ExprSingle

 109  OrderByClause : ORDER_BY OrderSpecList
 110                | STABLE_ORDER_BY OrderSpecList

 111  OrderSpecList : OrderSpec
 112                | OrderSpecList ',' OrderSpec

 113  OrderSpec : ExprSingle
 114            | ExprSingle OrderModifier

 115  OrderModifier : OrderDirection
 116                | COLLATION URILiteral
 117                | OrderDirection EmptyOrderSpec
 118                | OrderDirection COLLATION URILiteral
 119                | OrderDirection EmptyOrderSpec COLLATION URILiteral
 120                | EmptyOrderSpec
 121                | EmptyOrderSpec COLLATION URILiteral

 122  OrderDirection : ASCENDING
 123                 | DESCENDING

 124  EmptyOrderSpec : EMPTY_GREATEST
 125                 | EMPTY_LEAST

 126  QuantifiedExpr : SOME QuantifiedExprBody SATISFIES ExprSingle
 127                 | EVERY QuantifiedExprBody SATISFIES ExprSingle

 128  QuantifiedExprBody : QuantifiedExprOper
 129                     | QuantifiedExprBody ',' QuantifiedExprOper

 130  QuantifiedExprOper : '$' VarName opt_TypeDeclaration IN ExprSingle

 131  TypeswitchExpr : TYPESWITCH '(' Expr ')' CaseClauseList DEFAULT RETURN ExprSingle
 132                 | TYPESWITCH '(' Expr ')' CaseClauseList DEFAULT '$' VarName RETURN ExprSingle

 133  CaseClauseList : CaseClause
 134                 | CaseClauseList CaseClause

 135  CaseClause : CASE '$' VarName AS SequenceType RETURN ExprSingle
 136             | CASE SequenceType RETURN ExprSingle

 137  IfExpr : IF '(' Expr ')' THEN ExprSingle ELSE ExprSingle

 138  OrExpr : AndExpr
 139         | OrExpr OR AndExpr

 140  AndExpr : ComparisonExpr
 141          | AndExpr AND ComparisonExpr

 142  ComparisonExpr : RangeExpr
 143                 | RangeExpr ValueComp RangeExpr
 144                 | RangeExpr GeneralComp RangeExpr
 145                 | RangeExpr NodeComp RangeExpr

 146  RangeExpr : AdditiveExpr
 147            | AdditiveExpr TO AdditiveExpr

 148  AdditiveExpr : MultiplicativeExpr
 149               | AdditiveExpr '+' MultiplicativeExpr
 150               | AdditiveExpr '-' MultiplicativeExpr

 151  MultiplicativeExpr : UnionExpr
 152                     | MultiplicativeExpr ML UnionExpr
 153                     | MultiplicativeExpr DIV UnionExpr
 154                     | MultiplicativeExpr IDIV UnionExpr
 155                     | MultiplicativeExpr MOD UnionExpr

 156  UnionExpr : IntersectExceptExpr
 157            | UnionExpr UNION IntersectExceptExpr
 158            | UnionExpr '|' IntersectExceptExpr

 159  IntersectExceptExpr : InstanceofExpr
 160                      | IntersectExceptExpr INTERSECT InstanceofExpr
 161                      | IntersectExceptExpr EXCEPT InstanceofExpr

 162  InstanceofExpr : TreatExpr
 163                 | TreatExpr INSTANCE_OF SequenceType

 164  TreatExpr : CastableExpr
 165            | CastableExpr TREAT_AS SequenceType

 166  CastableExpr : CastExpr
 167               | CastExpr CASTABLE_AS SingleType

 168  CastExpr : UnaryExpr
 169           | UnaryExpr CAST_AS SingleType

 170  UnaryExpr : UnaryOperator ValueExpr

 171  UnaryOperator :
 172                | '+' UnaryOperator
 173                | '-' UnaryOperator

 174  GeneralComp : '='
 175              | '!' '='
 176              | '<'
 177              | '<' '='
 178              | '>'
 179              | '>' '='

 180  ValueComp : EQ
 181            | NE
 182            | LT
 183            | LE
 184            | GT
 185            | GE

 186  NodeComp : IS
 187           | '<' '<'
 188           | '>' '>'

 189  ValueExpr : ValidateExpr
 190            | PathExpr
 191            | ExtensionExpr

 192  ValidateExpr : VALIDATE '{' Expr '}'
 193               | VALIDATE ValidationMode '{' Expr '}'

 194  ValidationMode : LAX
 195                 | STRICT

 196  ExtensionExpr : PragmaList '{' Expr '}'

 197  PragmaList : Pragma
 198             | PragmaList Pragma

 199  Pragma : PRAGMA_BEGIN opt_S QName PragmaContents PRAGMA_END

 200  PathExpr : '/'
 201           | '/' RelativePathExpr
 202           | DOUBLE_SLASH RelativePathExpr
 203           | RelativePathExpr

 204  RelativePathExpr : StepExpr
 205                   | RelativePathExpr '/' StepExpr
 206                   | RelativePathExpr DOUBLE_SLASH StepExpr

 207  StepExpr : AxisStep
 208           | FilterExpr

 209  AxisStep : ForwardStep
 210           | ForwardStep PredicateList
 211           | ReverseStep
 212           | ReverseStep PredicateList

 213  ForwardStep : ForwardAxis NodeTest
 214              | AbbrevForwardStep

 215  ForwardAxis : AXIS_CHILD
 216              | AXIS_DESCENDANT
 217              | AXIS_ATTRIBUTE
 218              | AXIS_SELF
 219              | AXIS_DESCENDANT_OR_SELF
 220              | AXIS_FOLLOWING_SIBLING
 221              | AXIS_FOLLOWING
 222              | AXIS_NAMESPACE

 223  AbbrevForwardStep : '@' NodeTest
 224                    | NodeTest

 225  ReverseStep : ReverseAxis NodeTest
 226              | AbbrevReverseStep

 227  ReverseAxis : AXIS_PARENT
 228              | AXIS_ANCESTOR
 229              | AXIS_PRECEDING_SIBLING
 230              | AXIS_PRECEDING
 231              | AXIS_ANCESTOR_OR_SELF

 232  AbbrevReverseStep : DOUBLE_PERIOD

 233  NodeTest : KindTest
 234           | NameTest

 235  NameTest : QName
 236           | Wildcard

 237  Wildcard : '*'
 238           | NCName ':' '*'
 239           | '*' ':' NCName

 240  FilterExpr : PrimaryExpr
 241             | PrimaryExpr PredicateList

 242  PredicateList : Predicate
 243                | PredicateList Predicate

 244  Predicate : '[' Expr ']'

 245  PrimaryExpr : Literal
 246              | VarRef
 247              | ParenthesizedExpr
 248              | ContextItemExpr
 249              | FunctionCall
 250              | Constructor
 251              | OrderedExpr
 252              | UnorderedExpr

 253  Literal : NumericLiteral
 254          | StringLiteral

 255  NumericLiteral : IntegerLiteral
 256                 | DecimalLiteral
 257                 | DoubleLiteral

 258  VarRef : '$' VarName

 259  ParenthesizedExpr : '(' ')'
 260                    | '(' Expr ')'

 261  ContextItemExpr : '.'

 262  OrderedExpr : ORDERED '{' Expr '}'

 263  UnorderedExpr : UNORDERED '{' Expr '}'

 264  FunctionCall : QName '(' ')'
 265               | QName '(' Args ')'

 266  Args : ExprSingle
 267       | Args ',' ExprSingle

 268  Constructor : DirectConstructor
 269              | ComputedConstructor

 270  DirectConstructor : DirElemConstructor
 271                    | DirCommentConstructor
 272                    | DirPIConstructor

 273  DirElemConstructor : BeginTag QName opt_DirAttributeList '/' '>'
 274                     | BeginTag QName S '/' '>'
 275                     | BeginTag QName opt_DirAttributeList '>' '<' '/' QName opt_S '>'
 276                     | BeginTag QName S '>' '<' '/' QName opt_S '>'
 277                     | BeginTag QName opt_DirAttributeList '>' DirElemContentList '<' '/' QName opt_S '>'
 278                     | BeginTag QName S '>' DirElemContentList '<' '/' QName opt_S '>'

 279  DirElemContentList : DirElemContent
 280                     | DirElemContentList DirElemContent

 281  opt_DirAttributeList :
 282                       | DirAttributeList

 283  DirAttributeList : S DirAttribute
 284                   | DirAttributeList S
 285                   | DirAttributeList S DirAttribute

 286  DirAttribute : QName opt_S '=' opt_S '"' '"'
 287               | QName opt_S '=' opt_S '"' DirAttributeValueQuot '"'
 288               | QName opt_S '=' opt_S Apos Apos
 289               | QName opt_S '=' opt_S Apos DirAttributeValueApos Apos

 290  DirAttributeValueQuot : EscapeQuot
 291                        | QuotAttrValueContent
 292                        | DirAttributeValueQuot EscapeQuot
 293                        | DirAttributeValueQuot QuotAttrValueContent

 294  DirAttributeValueApos : EscapeApos
 295                        | AposAttrValueContent
 296                        | DirAttributeValueApos EscapeApos
 297                        | DirAttributeValueApos AposAttrValueContent

 298  QuotAttrValueContent : QuotAttrContentChar
 299                       | CommonContent

 300  AposAttrValueContent : AposAttrContentChar
 301                       | CommonContent

 302  DirElemContent : DirectConstructor
 303                 | ElementContentChar
 304                 | CDataSection
 305                 | CommonContent

 306  CommonContent : PredefinedEntityRef
 307                | CharRef
 308                | '{' '{'
 309                | '}' '}'
 310                | EnclosedExpr

 311  DirCommentConstructor : COMMENT_BEGIN StringLiteral COMMENT_END

 312  DirPIConstructor : PI_BEGIN StringLiteral PI_END
 313                   | PI_BEGIN StringLiteral S StringLiteral PI_END

 314  CDataSection : CDATA_BEGIN StringLiteral CDATA_END

 315  ComputedConstructor : CompDocConstructor
 316                      | CompElemConstructor
 317                      | CompAttrConstructor
 318                      | CompTextConstructor
 319                      | CompCommentConstructor
 320                      | CompPIConstructor

 321  CompDocConstructor : DOCUMENT '{' Expr '}'

 322  CompElemConstructor : ELEMENT QName '{' ContentExpr '}'
 323                      | ELEMENT QName '{' '}'
 324                      | ELEMENT '{' Expr '}' '{' ContentExpr '}'
 325                      | ELEMENT '{' Expr '}' '{' '}'

 326  ContentExpr : Expr

 327  CompAttrConstructor : ATTRIBUTE QName '{' Expr '}'
 328                      | ATTRIBUTE QName '{' '}'
 329                      | ATTRIBUTE '{' Expr '}' '{' Expr '}'
 330                      | ATTRIBUTE '{' Expr '}' '{' '}'

 331  CompTextConstructor : TEXT '{' Expr '}'

 332  CompCommentConstructor : COMMENT '{' Expr '}'

 333  CompPIConstructor : PROCESSING_INSTRUCTION NCName '{' Expr '}'
 334                    | PROCESSING_INSTRUCTION NCName '{' '}'
 335                    | PROCESSING_INSTRUCTION '{' Expr '}' '{' Expr '}'
 336                    | PROCESSING_INSTRUCTION '{' Expr '}' '{' '}'

 337  SingleType : AtomicType
 338             | AtomicType '?'

 339  TypeDeclaration : AS SequenceType

 340  SequenceType : ItemType
 341               | ItemType OccurrenceIndicator
 342               | EMPTY_SEQUENCE

 343  OccurrenceIndicator : Indicator1
 344                      | Indicator2
 345                      | Indicator3

 346  ItemType : AtomicType
 347           | KindTest
 348           | ITEM

 349  AtomicType : QName

 350  KindTest : KindTestBody

 351  KindTestBody : DocumentTest
 352               | ElementTest
 353               | AttributeTest
 354               | SchemaElementTest
 355               | SchemaAttributeTest
 356               | PITest
 357               | CommentTest
 358               | TextTest
 359               | AnyKindTest

 360  AnyKindTest : NODE '(' ')'

 361  DocumentTest : DOCUMENT_NODE '(' ')'
 362               | DOCUMENT_NODE '(' ElementTest ')'
 363               | DOCUMENT_NODE '(' SchemaElementTest ')'

 364  TextTest : TEXT '(' ')'

 365  CommentTest : COMMENT '(' ')'

 366  PITest : PROCESSING_INSTRUCTION '(' ')'
 367         | PROCESSING_INSTRUCTION '(' NCName ')'
 368         | PROCESSING_INSTRUCTION '(' StringLiteral ')'

 369  ElementTest : ELEMENT '(' ')'
 370              | ELEMENT '(' ElementNameOrWildcard ')'
 371              | ELEMENT '(' ElementNameOrWildcard ',' TypeName ')'
 372              | ELEMENT '(' ElementNameOrWildcard ',' TypeName '?' ')'

 373  ElementNameOrWildcard : ElementName
 374                        | '*'

 375  AttributeTest : ATTRIBUTE '(' ')'
 376                | ATTRIBUTE '(' AttributeOrWildcard ')'
 377                | ATTRIBUTE '(' AttributeOrWildcard ',' TypeName ')'

 378  AttributeOrWildcard : AttributeName
 379                      | '*'

 380  SchemaElementTest : SCHEMA_ELEMENT '(' ElementName ')'

 381  SchemaAttributeTest : SCHEMA_ATTRIBUTE '(' AttributeName ')'

 382  AttributeName : QName

 383  ElementName : QName

 384  TypeName : QName

 385  opt_S :
 386        | S

 387  QuotAttrContentChar : Char

 388  AposAttrContentChar : Char

 389  ElementContentChar : Char

 390  URILiteral : StringLiteral

state 0
	$accept : . module $end  (0)
	Prolog : .  (10)

	XQUERY_VERSION  shift 1
	MODULE_NAMESPACE  shift 2
	IMPORT_SCHEMA  shift 3
	IMPORT_MODULE  shift 4
	DECLARE_NAMESPACE  shift 5
	DECLARE_BOUNDARY_SPACE  shift 6
	DECLARE_DEFAULT_ELEMENT  shift 7
	DECLARE_DEFAULT_FUNCTION  shift 8
	DECLARE_DEFAULT_ORDER  shift 9
	DECLARE_OPTION  shift 10
	DECLARE_ORDERING  shift 11
	DECLARE_COPY_NAMESPACES  shift 12
	DECLARE_DEFAULT_COLLATION  shift 13
	DECLARE_BASE_URI  shift 14
	DECLARE_VARIABLE  shift 15
	DECLARE_CONSTRUCTION  shift 16
	DECLARE_FUNCTION  shift 17
	ORDERED  reduce 10
	UNORDERED  reduce 10
	FOR  reduce 10
	LET  reduce 10
	SOME  reduce 10
	EVERY  reduce 10
	TYPESWITCH  reduce 10
	IF  reduce 10
	DOCUMENT  reduce 10
	ELEMENT  reduce 10
	ATTRIBUTE  reduce 10
	TEXT  reduce 10
	COMMENT  reduce 10
	VALIDATE  reduce 10
	NODE  reduce 10
	DOUBLE_PERIOD  reduce 10
	StringLiteral  reduce 10
	IntegerLiteral  reduce 10
	DecimalLiteral  reduce 10
	DoubleLiteral  reduce 10
	NCName  reduce 10
	QName  reduce 10
	PROCESSING_INSTRUCTION  reduce 10
	DOCUMENT_NODE  reduce 10
	SCHEMA_ELEMENT  reduce 10
	SCHEMA_ATTRIBUTE  reduce 10
	DOUBLE_SLASH  reduce 10
	COMMENT_BEGIN  reduce 10
	PI_BEGIN  reduce 10
	PRAGMA_BEGIN  reduce 10
	AXIS_CHILD  reduce 10
	AXIS_DESCENDANT  reduce 10
	AXIS_ATTRIBUTE  reduce 10
	AXIS_SELF  reduce 10
	AXIS_DESCENDANT_OR_SELF  reduce 10
	AXIS_FOLLOWING_SIBLING  reduce 10
	AXIS_FOLLOWING  reduce 10
	AXIS_PARENT  reduce 10
	AXIS_ANCESTOR  reduce 10
	AXIS_PRECEDING_SIBLING  reduce 10
	AXIS_PRECEDING  reduce 10
	AXIS_ANCESTOR_OR_SELF  reduce 10
	AXIS_NAMESPACE  reduce 10
	BeginTag  reduce 10
	'$'  reduce 10
	'('  reduce 10
	'+'  reduce 10
	'-'  reduce 10
	'/'  reduce 10
	'@'  reduce 10
	'*'  reduce 10
	'.'  reduce 10

	module  goto 18
	versionDecl  goto 19
	MainModule  goto 20
	LibraryModule  goto 21
	Prolog  goto 22
	ModuleDecl  goto 23
	decl_block1  goto 24
	decl_block2  goto 25
	decl1  goto 26
	decl2  goto 27
	Setter  goto 28
	Import  goto 29
	NamespaceDecl  goto 30
	DefaultNamespaceDecl  goto 31
	VarDecl  goto 32
	FunctionDecl  goto 33
	OptionDecl  goto 34
	BoundarySpaceDecl  goto 35
	DefaultCollationDecl  goto 36
	BaseURIDecl  goto 37
	ConstructionDecl  goto 38
	OrderingModeDecl  goto 39
	EmptyOrderDecl  goto 40
	CopyNamespacesDecl  goto 41
	SchemaImport  goto 42
	ModuleImport  goto 43


state 1
	versionDecl : XQUERY_VERSION . StringLiteral Separator  (5)
	versionDecl : XQUERY_VERSION . StringLiteral ENCODING StringLiteral Separator  (6)

	StringLiteral  shift 44
	.  error


state 2
	ModuleDecl : MODULE_NAMESPACE . NCName '=' URILiteral Separator  (9)

	NCName  shift 45
	.  error


state 3
	SchemaImport : IMPORT_SCHEMA . opt_SchemaPrefix URILiteral  (52)
	SchemaImport : IMPORT_SCHEMA . opt_SchemaPrefix URILiteral AT URILiteralList  (53)
	opt_SchemaPrefix : .  (54)

	NAMESPACE  shift 46
	DEFAULT_ELEMENT  shift 47
	StringLiteral  reduce 54

	opt_SchemaPrefix  goto 48
	SchemaPrefix  goto 49


state 4
	ModuleImport : IMPORT_MODULE . URILiteral ModuleImportSpec  (60)
	ModuleImport : IMPORT_MODULE . NAMESPACE NCName '=' URILiteral ModuleImportSpec  (61)

	NAMESPACE  shift 50
	StringLiteral  shift 51
	.  error

	URILiteral  goto 52


state 5
	NamespaceDecl : DECLARE_NAMESPACE . NCName '=' URILiteral  (35)

	NCName  shift 53
	.  error


state 6
	BoundarySpaceDecl : DECLARE_BOUNDARY_SPACE . PRESERVE  (36)
	BoundarySpaceDecl : DECLARE_BOUNDARY_SPACE . STRIP  (37)

	PRESERVE  shift 54
	STRIP  shift 55
	.  error


state 7
	DefaultNamespaceDecl : DECLARE_DEFAULT_ELEMENT . NAMESPACE URILiteral  (38)

	NAMESPACE  shift 56
	.  error


state 8
	DefaultNamespaceDecl : DECLARE_DEFAULT_FUNCTION . NAMESPACE URILiteral  (39)

	NAMESPACE  shift 57
	.  error


state 9
	EmptyOrderDecl : DECLARE_DEFAULT_ORDER . EMPTY_GREATEST  (43)
	EmptyOrderDecl : DECLARE_DEFAULT_ORDER . EMPTY_LEAST  (44)

	EMPTY_GREATEST  shift 58
	EMPTY_LEAST  shift 59
	.  error


state 10
	OptionDecl : DECLARE_OPTION . QName StringLiteral  (40)

	QName  shift 60
	.  error


state 11
	OrderingModeDecl : DECLARE_ORDERING . ORDERED  (41)
	OrderingModeDecl : DECLARE_ORDERING . UNORDERED  (42)

	ORDERED  shift 61
	UNORDERED  shift 62
	.  error


state 12
	CopyNamespacesDecl : DECLARE_COPY_NAMESPACES . PreserveMode ',' InheritMode  (45)

	PRESERVE  shift 63
	NO_PRESERVE  shift 64
	.  error

	PreserveMode  goto 65


state 13
	DefaultCollationDecl : DECLARE_DEFAULT_COLLATION . URILiteral  (50)

	StringLiteral  shift 51
	.  error

	URILiteral  goto 66


state 14
	BaseURIDecl : DECLARE_BASE_URI . URILiteral  (51)

	StringLiteral  shift 51
	.  error

	URILiteral  goto 67


state 15
	VarDecl : DECLARE_VARIABLE . '$' VarName opt_TypeDeclaration ':' '=' ExprSingle  (64)
	VarDecl : DECLARE_VARIABLE . '$' VarName opt_TypeDeclaration EXTERNAL  (65)

	'$'  shift 68
	.  error


state 16
	ConstructionDecl : DECLARE_CONSTRUCTION . PRESERVE  (68)
	ConstructionDecl : DECLARE_CONSTRUCTION . STRIP  (69)

	PRESERVE  shift 69
	STRIP  shift 70
	.  error


state 17
	FunctionDecl : DECLARE_FUNCTION . QName '(' opt_ParamList ')' FunctionBody  (70)
	FunctionDecl : DECLARE_FUNCTION . QName '(' opt_ParamList ')' AS SequenceType FunctionBody  (71)

	QName  shift 71
	.  error


state 18
	$accept : module . $end  (0)

	$end  accept


state 19
	module : versionDecl . MainModule  (1)
	module : versionDecl . LibraryModule  (3)
	Prolog : .  (10)

	MODULE_NAMESPACE  shift 2
	IMPORT_SCHEMA  shift 3
	IMPORT_MODULE  shift 4
	DECLARE_NAMESPACE  shift 5
	DECLARE_BOUNDARY_SPACE  shift 6
	DECLARE_DEFAULT_ELEMENT  shift 7
	DECLARE_DEFAULT_FUNCTION  shift 8
	DECLARE_DEFAULT_ORDER  shift 9
	DECLARE_OPTION  shift 10
	DECLARE_ORDERING  shift 11
	DECLARE_COPY_NAMESPACES  shift 12
	DECLARE_DEFAULT_COLLATION  shift 13
	DECLARE_BASE_URI  shift 14
	DECLARE_VARIABLE  shift 15
	DECLARE_CONSTRUCTION  shift 16
	DECLARE_FUNCTION  shift 17
	ORDERED  reduce 10
	UNORDERED  reduce 10
	FOR  reduce 10
	LET  reduce 10
	SOME  reduce 10
	EVERY  reduce 10
	TYPESWITCH  reduce 10
	IF  reduce 10
	DOCUMENT  reduce 10
	ELEMENT  reduce 10
	ATTRIBUTE  reduce 10
	TEXT  reduce 10
	COMMENT  reduce 10
	VALIDATE  reduce 10
	NODE  reduce 10
	DOUBLE_PERIOD  reduce 10
	StringLiteral  reduce 10
	IntegerLiteral  reduce 10
	DecimalLiteral  reduce 10
	DoubleLiteral  reduce 10
	NCName  reduce 10
	QName  reduce 10
	PROCESSING_INSTRUCTION  reduce 10
	DOCUMENT_NODE  reduce 10
	SCHEMA_ELEMENT  reduce 10
	SCHEMA_ATTRIBUTE  reduce 10
	DOUBLE_SLASH  reduce 10
	COMMENT_BEGIN  reduce 10
	PI_BEGIN  reduce 10
	PRAGMA_BEGIN  reduce 10
	AXIS_CHILD  reduce 10
	AXIS_DESCENDANT  reduce 10
	AXIS_ATTRIBUTE  reduce 10
	AXIS_SELF  reduce 10
	AXIS_DESCENDANT_OR_SELF  reduce 10
	AXIS_FOLLOWING_SIBLING  reduce 10
	AXIS_FOLLOWING  reduce 10
	AXIS_PARENT  reduce 10
	AXIS_ANCESTOR  reduce 10
	AXIS_PRECEDING_SIBLING  reduce 10
	AXIS_PRECEDING  reduce 10
	AXIS_ANCESTOR_OR_SELF  reduce 10
	AXIS_NAMESPACE  reduce 10
	BeginTag  reduce 10
	'$'  reduce 10
	'('  reduce 10
	'+'  reduce 10
	'-'  reduce 10
	'/'  reduce 10
	'@'  reduce 10
	'*'  reduce 10
	'.'  reduce 10

	MainModule  goto 72
	LibraryModule  goto 73
	Prolog  goto 22
	ModuleDecl  goto 23
	decl_block1  goto 24
	decl_block2  goto 25
	decl1  goto 26
	decl2  goto 27
	Setter  goto 28
	Import  goto 29
	NamespaceDecl  goto 30
	DefaultNamespaceDecl  goto 31
	VarDecl  goto 32
	FunctionDecl  goto 33
	OptionDecl  goto 34
	BoundarySpaceDecl  goto 35
	DefaultCollationDecl  goto 36
	BaseURIDecl  goto 37
	ConstructionDecl  goto 38
	OrderingModeDecl  goto 39
	EmptyOrderDecl  goto 40
	CopyNamespacesDecl  goto 41
	SchemaImport  goto 42
	ModuleImport  goto 43


state 20
	module : MainModule .  (2)

	.  reduce 2


state 21
	module : LibraryModule .  (4)

	.  reduce 4


state 22
	MainModule : Prolog . QueryBody  (7)
	UnaryOperator : .  (171)

	FOR  shift 74
	LET  shift 75
	SOME  shift 76
	EVERY  shift 77
	TYPESWITCH  shift 78
	IF  shift 79
	'+'  shift 80
	'-'  shift 81
	ORDERED  reduce 171
	UNORDERED  reduce 171
	DOCUMENT  reduce 171
	ELEMENT  reduce 171
	ATTRIBUTE  reduce 171
	TEXT  reduce 171
	COMMENT  reduce 171
	VALIDATE  reduce 171
	NODE  reduce 171
	DOUBLE_PERIOD  reduce 171
	StringLiteral  reduce 171
	IntegerLiteral  reduce 171
	DecimalLiteral  reduce 171
	DoubleLiteral  reduce 171
	NCName  reduce 171
	QName  reduce 171
	PROCESSING_INSTRUCTION  reduce 171
	DOCUMENT_NODE  reduce 171
	SCHEMA_ELEMENT  reduce 171
	SCHEMA_ATTRIBUTE  reduce 171
	DOUBLE_SLASH  reduce 171
	COMMENT_BEGIN  reduce 171
	PI_BEGIN  reduce 171
	PRAGMA_BEGIN  reduce 171
	AXIS_CHILD  reduce 171
	AXIS_DESCENDANT  reduce 171
	AXIS_ATTRIBUTE  reduce 171
	AXIS_SELF  reduce 171
	AXIS_DESCENDANT_OR_SELF  reduce 171
	AXIS_FOLLOWING_SIBLING  reduce 171
	AXIS_FOLLOWING  reduce 171
	AXIS_PARENT  reduce 171
	AXIS_ANCESTOR  reduce 171
	AXIS_PRECEDING_SIBLING  reduce 171
	AXIS_PRECEDING  reduce 171
	AXIS_ANCESTOR_OR_SELF  reduce 171
	AXIS_NAMESPACE  reduce 171
	BeginTag  reduce 171
	'$'  reduce 171
	'('  reduce 171
	'/'  reduce 171
	'@'  reduce 171
	'*'  reduce 171
	'.'  reduce 171

	QueryBody  goto 82
	ExprSingle  goto 83
	Expr  goto 84
	FLWORExpr  goto 85
	QuantifiedExpr  goto 86
